plugins {
    id 'java-library'
    id 'maven-publish'
}

// Project version is set via the VERSION environment variable in the Github Actions workflow and should not be changed here.
def projectVersion = System.getenv("VERSION") ?: '1.0.0'
def runeLiteVersion = '1.11.14' // latest.release

version = projectVersion
project.version = projectVersion


repositories {
    mavenLocal()
    maven {
        url = 'https://repo.runelite.net'
    }
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.1'
    implementation("com.google.guava:guava:31.1-jre")
    implementation("org.slf4j:slf4j-api:1.7.25")
    implementation("org.slf4j:slf4j-simple:1.7.25")
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'


    compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
    implementation group: 'com.github.cbartram', name:'shortest-path', version: '1.0.3'
    testImplementation 'junit:junit:4.12'
    testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

testing {
    suites {
        test {
            useJUnit('4.13.2')
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

jar {
    archiveBaseName = 'kraken-api'
    archiveVersion = projectVersion
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            groupId = 'com.github.cbartram'
            artifactId = 'kraken-api'
            version = project.version
        }
    }
}
